--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,13 @@ rocksdb = { version = "0.18.0", features = ["multi-threaded-cf"]}
 chrono = "0.4.19"
 tokio = { version = "1", features = ["full"] }
 once_cell = "*"
+serde = { version = "1.0.136", features = ["derive"] }
+rmp-serde = "1.1.0"
+
+[dev-dependencies]
+bencher = "*"
+threadpool = "1"
+
+[[bench]]
+name = "snowflake"
+harness = false
