--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocksdb = { version = "0.18.0", features = ["multi-threaded-cf"]}
+rocksdb = { version = "0.18.0"}
 chrono = "0.4.19"
 tokio = { version = "1", features = ["full"] }
 once_cell = "*"
