添加更多的tokio rocksdb示例

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ tokio = { version = "1", features = ["full"] }
 once_cell = "*"
 serde = { version = "1.0.136", features = ["derive"] }
 rmp-serde = "1.1.0"
-uuid = { version = "1.0.0", features =[ "v4", "fast-rng","macro-diagnostics",]}
+async-trait = "0.1.53"
 
 [dev-dependencies]
 bencher = "*"
